# uptickcoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac  libuptickcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  msvc-autogen.py  uptickcoin.sln  uptickcoin_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  uptickcoin-pos-cli.bash-completion  uptickcoin-pos-qt.pro  uptickcoin-pos-tx.bash-completion  uptickcoin-posd.bash-completion  valgrind.supp
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  uptickcoin-conf.md  uptickcoin-pos-conf.md  zmq.md
doc/man/: Makefile.am  uptickcoin-cli.1  uptickcoin-qt.1  uptickcoin-tx.1  uptickcoin-wallet.1  uptickcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  chain.h  chainparams.cpp  coins.h  (+37 more)
(+463 files in other folders)
